# sphinxtesters

./: .coveragerc  .gitattributes  .gitignore  .travis.yml  Changelog  LICENSE  MANIFEST.in  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: testing.yml
doc/: Makefile  README.rst  conf.py  index.rst  links_names.inc  make.bat
doc/devel/: make_release.rst
sphinxtesters/: __init__.py  _version.py  sphinxutils.py
sphinxtesters/tests/: test_modified_pagebuilder.py  test_pagebuilder.py  test_proj1.py  test_sources_builder.py  test_testapp.py
sphinxtesters/tests/proj1/: README.md
